--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	  <meta name="keywords" content="add, keywords, here">
   	<meta name="author" content="Marc Leonard">
     <title>Title of site</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="style.css">
+    <script src="js_code.js"></script>
   </head>
   <body>
     <header>
